--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
         <nav>
           <li class="fork"><a href="/">Home</a></li>
           <li class="fork"><a href="/about.html">About</a></li>
+          <li class="fork"><a href="/team.html">Team</a></li>
           <li class="fork"><a href="/blog.html">Blog</a></li>
         </nav>
       </div><!-- end header -->
