--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,22 +18,20 @@
 
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="/">Home</a></li>
-          <li class="fork"><a href="/about.html">About</a></li>
-          <li class="fork"><a href="/team.html">Team</a></li>
-          <li class="fork"><a href="/blog.html">Blog</a></li>
-        </nav>
-      </div><!-- end header -->
-
-    <div class="wrapper">
+  <header>
+    <div class="innerheader">
+          <a class="button" href="/">Home</a>
+          <a class="button" href="/about.html">About</a>
+          <a class="button" href="/team.html">Team</a>
+          <a class="button" href="/blog.html">Blog</a>
+    </div>
+  </header>
+    <div class="inner">
 
       <section>
       {{ content }}
       <p></p>
       <hr>
-      <div id="title"><span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span></div>
       </section>
 
     </div>
