--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 
 {% seo %}
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="shortcut icon" type="image/png" href="/assets/img/air_logo.png">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
     <!--[if lt IE 9]>
@@ -20,10 +21,11 @@
   <body>
   <header>
     <div class="innerheader">
-          <a class="button" href="/">Home</a>
+          <a href="/"><img src="/assets/img/air_logo.png" class="image"></a>
+          <span style="float:right;"><a class="button" href="/">Home</a>
           <a class="button" href="/about.html">About</a>
           <a class="button" href="/team.html">Team</a>
-          <a class="button" href="/blog.html">Blog</a>
+          <a class="button" href="/blog.html">Blog</a></span>
     </div>
   </header>
     <div class="inner">
