--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,14 +3,26 @@
 
 @import "{{ site.theme }}";
 
+.image {
+  align: left;
+  height: 150px;
+  width: 150px;
+}
+
 header a.button {
+  top: 60px;
   position: relative;
   background: none
 }
 
+header {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
 .innerheader {
   position: relative;
-  text-align: right;
+  height: 150px;
   width: 1000px;
   margin: 0 auto;
 }
