Testing adding a caption to the header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
   <body>
   <header>
     <div class="innerheader">
-          <a href="/"><img src="/assets/img/air_logo.png" class="image"></a>
+          <a href="/"><img src="/assets/img/air_logo.png" class="image"> Automatic Inhalation Resuscitator</a>
           <span style="float:right;"><a class="button" href="/">Home</a>
           <a class="button" href="/about.html">About</a>
           <a class="button" href="/team.html">Team</a>
