Added footer, made website slightly more mobile friendly

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,4 +38,9 @@
 
     </div>
   </body>
+  <header>
+      <div class="footer">
+          <a class="button">Breathing AIR Into Patients</a>
+    </div>
+    </header>
 </html>
