--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,12 +23,29 @@ header {
 .innerheader {
   position: relative;
   height: 150px;
+  padding-left:20px;
   width: 1000px;
+  min-width:20%;
+  max-width:100%;
   margin: 0 auto;
 }
 
-.inner {
+.footer {
+  position: relative;
+  height: 150px;
+  padding-left:20px;
   width: 1000px;
+  min-width:20%;
+  max-width:100%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.inner {
+  padding-left:20px;
+  width: 1000px;
+  min-width:30%;
+  max-width:100%;
 }
 
 hr.section {
