Testing changes to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
   <header>
       <div class="footer">
           <a class="button">Breathing AIR Into Patients</a>
+          <a class="button">Created by Students at the University of Waterloo</a>
     </div>
     </header>
 </html>
