Testing a bigger change to the footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,9 +39,15 @@
     </div>
   </body>
   <header>
-      <div class="footer">
-          <a class="button">Breathing AIR Into Patients</a>
-          <a class="button">Created by Students at the University of Waterloo</a>
+      <div class="footer-col-wrapper">
+        <div class="footer-col one-half footer-col-left" >
+          <h2 class="footer-heading">Automatic Inhalation Resucitator</h2>
+          <p>Created by Students at the University of Waterloo</p>
+        </div>
+
+        <div class="footer-col one-half foorter-col-right" >
+          <h2 class="footer-heading">Breathing AIR Into Patients</h2>
+        </div>
     </div>
     </header>
 </html>
