Make footer columns instead of rows

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,16 +38,27 @@
 
     </div>
   </body>
-  <header>
-      <div class="footer-col-wrapper">
-        <div class="footer-col one-half footer-col-left" >
-          <h2 class="footer-heading">Automatic Inhalation Resucitator</h2>
-          <p>Created by Students at the University of Waterloo</p>
-        </div>
 
-        <div class="footer-col one-half foorter-col-right" >
-          <h2 class="footer-heading">Breathing AIR Into Patients</h2>
-        </div>
+  <footer class="site-footer h-card">
+  <data class="u-url" href="{{ "/" | relative_url }}"></data>
+
+  <div class="wrapper" >
+
+    <div class="footer-col-wrapper">
+      <div class="footer-col one-half footer-col-left" >
+        <h2 class="footer-heading">Automatic Inhalation Resucitator</h2>
+        <h4>Created by Students at the University of Waterloo</h4>
+      </div>
+
+      <div class="footer-col one-half foorter-col-right" >
+        <h2 class="footer-heading">Breathing AIR Into Patients</h2>
+      </div>
     </div>
-    </header>
+  </div>
+
+  </div>
+
+</footer>
+
+  </header>
 </html>
