Try this one...

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,27 +38,19 @@
 
     </div>
   </body>
+  <header>
+    <div class="wrapper" >
 
-  <footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
+      <div class="footer-col-wrapper">
+        <div class="footer-col one-half footer-col-left" >
+          <h2 class="footer-heading">Automatic Inhalation Resucitator</h2>
+          <h4>Created by Students at the University of Waterloo</h4>
+        </div>
 
-  <div class="wrapper" >
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col one-half footer-col-left" >
-        <h2 class="footer-heading">Automatic Inhalation Resucitator</h2>
-        <h4>Created by Students at the University of Waterloo</h4>
-      </div>
-
-      <div class="footer-col one-half foorter-col-right" >
-        <h2 class="footer-heading">Breathing AIR Into Patients</h2>
+        <div class="footer-col one-half foorter-col-right" >
+          <h2 class="footer-heading">Breathing AIR Into Patients</h2>
+        </div>
       </div>
     </div>
-  </div>
-
-  </div>
-
-</footer>
-
   </header>
 </html>
