One more little test

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,12 +39,12 @@
     </div>
   </body>
   <header>
-      <div class="footer-col one-half footer-col-left" >
+      <div class="footer-col-left" >
         <h2 class="footer-heading">Automatic Inhalation Resucitator</h2>
         <h4>Created by Students at the University of Waterloo</h4>
       </div>
 
-      <div class="footer-col one-half foorter-col-right" >
+      <div class="footer-col-right" >
         <h2 class="footer-heading">Breathing AIR Into Patients</h2>
       </div>
   </header>
