Back to original

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,13 +39,8 @@
     </div>
   </body>
   <header>
-      <div class="footer-col-left" >
-        <h2 class="footer-heading">Automatic Inhalation Resucitator</h2>
-        <h4>Created by Students at the University of Waterloo</h4>
-      </div>
-
-      <div class="footer-col-right" >
-        <h2 class="footer-heading">Breathing AIR Into Patients</h2>
-      </div>
-  </header>
+       <div class="footer">
+           <a class="button">Breathing AIR Into Patients</a>
+     </div>
+     </header>
 </html>
